# gptlearn

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/flashcards/: admin.py  asgi.py  conftest.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
backend/flashcards/migrations/: 0001_initial.py
backend/flashcards/static_src/: tailwind.config.js
backend/flashcards/static_src/src/: styles.css
backend/flashcards/templates/: chat_interface.html
backend/flashcards/tests/: factories.py
flashcards/: admin.py  asgi.py  conftest.py  consumers.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
flashcards/migrations/: 0001_initial.py  0002_conversation_user.py
flashcards/static_src/: package-lock.json  package.json
flashcards/static_src/src/: styles.css
flashcards/templates/: article.html  base.html  chat_interface.html  conversation_list.html
flashcards/templates/chat/: index.html  room.html
flashcards/tests/: test_views.py  test_ws.py
frontend/: Dockerfile  package-lock.json  package.json  server.mjs
frontend/app/: data.ts  root.jsx  root.tsx  sessions.ts
frontend/app/routes/: contacts.$contactId.tsx  contacts.$contactId_.edit.tsx  conversations.tsx  login.tsx  logout.tsx  whoami.tsx
nginx/: nginx.conf
redis/: Dockerfile
