[tool.poetry]
name = "gptlearn"
version = "0.1.0"
description = "Django app for making flashcards with ChatGPT"
authors = ["CharlieKC <charlie.kruczko@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-ninja = "^0.22.2"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}
django-browser-reload = "^1.11.0"
whitenoise = "^6.5.0"
django-debug-toolbar = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
